test/invalid/idl/tostring.webidl
interface mixin ToString {
  DOMString toString();
};
